feat : image location 추가

--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -6,10 +6,14 @@ server {
     		try_files $uri $uri/ /index.html;
 	}
 
+	location /qbox/prod/image/ {
+		root /home/ubuntu/qbox/prod/image/;
+	}
+
 	location /api/ {
 		proxy_set_header Host $host;
-       		proxy_set_header X-Real-IP $remote_addr;
-        	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       	proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Cookie $http_cookie;
 		proxy_pass_header Set-Cookie;
 		proxy_set_header X-Forwarded-Proto $scheme;
