--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -1,9 +1,9 @@
 server {
-        server_name q-box.site;
+	server_name q-box.site;
 	location / {
-    		root   /home/ubuntu/app/build;
+		root   /home/hyeonjunpark/app/build;
 		index  index.html index.htm;
-    		try_files $uri $uri/ /index.html;
+		try_files $uri $uri/ /index.html;
 	}
 
 	location /qbox/prod/image/ {
@@ -12,8 +12,8 @@ server {
 
 	location /api/ {
 		proxy_set_header Host $host;
-       	proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Cookie $http_cookie;
 		proxy_pass_header Set-Cookie;
 		proxy_set_header X-Forwarded-Proto $scheme;
@@ -21,24 +21,49 @@ server {
 		proxy_pass http://127.0.0.1:8080;
 	}
 
+	location /moni/grafana/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Cookie $http_cookie;
+		proxy_pass_header Set-Cookie;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_redirect off;
+		proxy_pass http://127.0.0.1:3000;
+	}
+	location /moni/grafana/api/live/ {
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection upgrade;
+		proxy_set_header Host $host;
+		proxy_pass http://127.0.0.1:3000;
+ 	 }
 
+	location /moni/prom/ {
+		rewrite /moni/prom/(.*) /$1  break;
+		proxy_http_version 1.1;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Cookie $http_cookie;
+		proxy_pass_header Set-Cookie;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_redirect off;
+		proxy_pass http://127.0.0.1:9090/;
+    }
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/q-box.site-0001/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/q-box.site-0001/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/q-box.site/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/q-box.site/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
 }
 server {
     if ($host = q-box.site) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-
-        server_name q-box.site;
+	server_name q-box.site;
     listen 80;
     return 404; # managed by Certbot
-
-
 }
